@@ -1,3 +1,8 @@
+2010-06-06  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/dial.c, src/config.c: Rename local variable local_echo to
+	  local_echo_str as there's also a global variable local_echo.
+
 2010-05-30  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* src/updown.c: Check for error conditions on fd of running script.
